# spi-st7735-lcd

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: main.rs  rgb565-car.raw
